--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.0",
     "@actions/io": "^1.1.3",
-    "adm-zip": "^0.5.16"
+    "adm-zip": "^0.5.16",
+    "tar": "^7.4.3"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.2",
